# mtgcompiler

./: DESIGN.md  pyproject.toml  setup.cfg
src/mtgcompiler/: __init__.py  _lower.py  cli.py
src/mtgcompiler/ast/: __init__.py
src/mtgcompiler/frontend/compilers/LarkMtgJson/: MtgJsonPreprocessor.py
tests/: test_public_api.py
tests/parsing/: test_mtgjson_parseWithAlternateLexerAndParser.py
tests/parsing/revisedgrammar/: declarations.lark  expressions.lark  statements.lark
